class-4/sg/main.tf
provider "aws" {
    region = "us-east-1"
}

resource "aws_instance" "ec2" {
    ami                     = "ami-0a5c3558529277641"
    instance_type           = "t2.micro"
    security_groups         = [aws_security_group.webtraffic.name]
}

resource "aws_security_group" "webtraffic" {
    name                = "Allow HTTPS"

    ingress {
        from_port       = 443
        to_port         = 443
        protocol        = "TCP"
        cidr_blocks     =  ["0.0.0.0/0"]
    }

    egress {
        from_port       = 443
        to_port         = 443
        protocol        = "TCP"
        cidr_blocks     =  ["0.0.0.0/0"]
    }

}
